<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rel_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/act_login_rel_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/doodles_bg">
            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/dp180"
                android:layout_height="@dimen/dp180"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_below="@id/act_login_rel_lyt">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_login_mobile_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:maxLength="@integer/mobile_no_maximum"
                    android:hint="@string/enter_mobile_number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                app:passwordToggleTint="@color/cellpayAccentAlt"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_login_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:maxLength="@integer/pin_max"
                    android:hint="@string/enter_6_digit_pin" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/act_login_proceed_btn"
                android:layout_width="@dimen/dp180"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:layout_gravity="center"
                android:text="@string/log_in"

                style="@style/btnStyle" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>